--- a/index.html
+++ b/index.html
@@ -14,12 +14,39 @@
     user-select: none;           /* non-prefixed version, currently
                                   not supported by any browser */
 }
+
+#container {
+    position: relative;
+    width: 500px;
+    height: 500px;
+}
+
+#gameOver {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    text-align: center;
+    vertical-align: middle;
+    align-content: center;
+    font-size: 30px;
+    font-weight: bold;
+    color: #7f0000;
+    text-shadow: #fff 0px 0px 5px;
+}
     </style>
 </head>
 
 <div class="text-xl font-bold">Score: <span id="score"></span></div>
 
-<div id="grid" style="position: relative"></div>
+<div id="container">
+    <div id="grid" style="position: relative"></div>
+    <div id="gameOver">
+        <div class="noselect" style="pointer-events: none;">Game Over</div>
+        <div><button id="restart">Restart</button></div>
+    </div>
+</div>
 
 
 <script src="main.js"></script>
