--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <head>
     <title>Rock Paper Scissors in a Grid</title>
     <style>
+
+body {
+    text-align: center;
+}
+
 /* Class that prevents text selection by mouse dragging.
   The style is not defined by standard, so we'd write down browser-dependent styles for major browsers.
   Support by IE11 is somewhat incomplete since Ctrl+A selects the text in elements even with this style. */
@@ -17,6 +22,7 @@
 
 #container {
     position: relative;
+    display: inline-block;
     width: 500px;
     height: 500px;
 }
@@ -48,6 +54,7 @@
     </div>
 </div>
 
+<div><button id="restartOutside">Restart</button></div>
 
 <script src="main.js"></script>
 </html>
